add page ace project

--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -21,7 +21,16 @@
   .purple-bg{
     background-color: #A600F9;
   }
+} 
+//home/index page
+
+.navbar {
+  background-color:#000!important;
+  color:#222 !important;
+  margin-bottom:0!important;
+  border-radius:0 !important;
 }
+
 .project_name {
   text-align:center;
   padding-bottom:5px;
