--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -1,3 +1,4 @@
+  <%= render 'share/header' %>
 <div class="main-container" id="main-container">
       <script type="text/javascript">
         try{ace.settings.check('main-container' , 'fixed')}catch(e){}
@@ -243,6 +244,21 @@
             <div class="row">
               <div class="col-xs-12">
               <div class="row">
+              <div class="col-xs-12">
+              <div class="row">
+                    <ul class="breadcrumb">
+                    <li>
+                    <i class="icon-home home-icon"></i>
+                    <a href="#">Home</a>
+                    </li>
+
+                    <li>
+                    <a href="#">Other Pages</a>
+                    </li>
+                    <li class="active">Blank Page</li>
+                    </ul><!-- .breadcrumb -->
+              </div>
+              </div>
                 <!-- PAGE CONTENT BEGINS -->
                 <div class="col-xs-6 ace_content_page_left">
                 <div class="row">
@@ -251,6 +267,29 @@
                     <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加任务
                     </a>
                     </div>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
+                    222222<br>
                     222222<br>
                 </div>
                 </div>
@@ -279,3 +318,9 @@
             </div><!-- /.row -->
           </div><!-- /.page-content -->
         </div><!-- /.main-content -->
+
+      
+
+              <a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
+              <i class="icon-double-angle-up icon-only bigger-110"></i>
+              </a>
