--- a/app/assets/stylesheets/application/recruitments.css.scss
+++ b/app/assets/stylesheets/application/recruitments.css.scss
@@ -89,8 +89,9 @@
       width:20px;
       height:20px;
     }
-    p {
-     text-indent:2em;
+    p.p-info {
+     text-indent: 2em;
+     line-height: 2;
     }
    .company {
     line-height:30px;
