--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -249,11 +249,7 @@
                     <ul class="breadcrumb">
                     <li>
                     <i class="icon-home home-icon"></i>
-                    <a href="#">Home</a>
-                    </li>
-
-                    <li>
-                    <a href="#">Other Pages</a>
+                    <a href="<%=training_platform_root_path %>">Home</a>
                     </li>
                     <li class="active">Blank Page</li>
                     </ul><!-- .breadcrumb -->
