recruitment data test

--- a/app/views/recruitments/index.html.erb
+++ b/app/views/recruitments/index.html.erb
@@ -48,7 +48,7 @@
         </select>
       </div>
       <div class="col-md-2">
-        <%= link_to("实习推荐",recommend_recruitments_path  , class: "btn find_job recommend") %>
+        <%= link_to("实习信息",recommend_recruitments_path  , class: "btn find_job recommend") %>
       </div>
     </div>
     <div class="container">
