--- a/app/views/recruitments/recommend.html.erb
+++ b/app/views/recruitments/recommend.html.erb
@@ -23,7 +23,7 @@
         <input class="form-control" placeholder="请输入职位名、公司名等关键字"/>
       </div>
       <div class="col-md-2">
-        <%= link_to("找工作", recruitments_path  , class: "btn find_job") %>
+        <%= link_to("找实习", recruitments_path  , class: "btn find_job") %>
       </div>
     </div>
     <div class="col-md-12">
@@ -48,7 +48,7 @@
         </select>
       </div>
       <div class="col-md-2">
-        <%= link_to("工作推荐",recruitments_path  , class: "btn find_job recommend") %>
+        <%= link_to("招聘信息",recruitments_path  , class: "btn find_job recommend") %>
       </div>
     </div>
     <div class="container">
@@ -64,7 +64,7 @@
         <tr>
           <th width="15%">职位</th>
           <th>logo</th>
-          <th width="10%">公司</th>
+          <th>公司</th>
           <th width="10%">工作地点</th>
           <th width="12%">
             发布时间<span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
@@ -81,12 +81,12 @@
         <tbody class="recruit_list_text">
         <% @recruitments.each do |recruitment| %>
         <tr class="job_tr">
-          <td><%=link_to recruitment.name, recruitment_path(recruitment) %></td>
-          <td><%=image_tag recruitment.try(:company).try(:logo_url).present? ? recruitment.try(:company).try(:logo_url) : "0401_1.png" %></td>
-          <td><%=recruitment.try(:company).try(:name) %></td>
+          <td><%=link_to truncate(recruitment.name, length: 12), recruitment_path(recruitment) %></td>
+          <td><%=image_tag recruitment.try(:company).try(:logo_url).present? ? recruitment.try(:company).try(:logo_url) : "delo.jpg", style: "max-height: 45px;" %></td>
+          <td><%=truncate(recruitment.try(:company).try(:name), length: 12) %></td>
           <td><%=recruitment.city %></td>
-          <td><%=recruitment.publish_time %></td>
-          <td><%=recruitment.view_count %></td>
+          <td><%=recruitment.publish_time.try(:strftime, "%F") %></td>
+          <td><%=recruitment.browse_count %></td>
           <td>
             <%= link_to("javascript:void(0);" , title: "收藏", class: "vote-create-a", voteable_id: recruitment.id, voteable_type: recruitment.class, style_type: "recruitment-list") do %>
               <span id="voteRecruitmentSpan<%= recruitment.id %>" class="glyphicon <%= (current_user.try(:voted_up_on?,recruitment)) ? "glyphicon-star" : "glyphicon-star-empty" %> iconstar" aria-hidden="true"></span>
@@ -100,7 +100,7 @@
             <% end %>
           </td>
         </tr>
-        <tr class="job_blank">
+        <tr class="job_blank" style="height: 5px;">
           <td>&nbsp</td>
           <td>&nbsp</td>
           <td>&nbsp</td>
