--- a/app/views/recruitments/show.html.erb
+++ b/app/views/recruitments/show.html.erb
@@ -33,7 +33,7 @@
             <td>外语要求</td>
             <td class="text-left"> <%=@recruitment.foreign_language %></td>
             <td>其他要求</td>
-            <td class="text-left"> <%=@recruitment.it_tec %>、<%=@recruitment.age %></td>
+            <td class="text-left"> <%=@recruitment.it_tec %>、年龄：<%=@recruitment.age %></td>
           </tr>
       </table>
     </div>
