--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -49,28 +49,28 @@
                 </li>
 
                 <li>
-                  <a href="buttons.html">
+                  <a href="#">
                     <i class="icon-double-angle-right"></i>
                     按钮 &amp; 图表
                   </a>
                 </li>
 
                 <li>
-                  <a href="treeview.html">
+                  <a href="#">
                     <i class="icon-double-angle-right"></i>
                     树菜单
                   </a>
                 </li>
 
                 <li>
-                  <a href="jquery-ui.html">
+                  <a href="#">
                     <i class="icon-double-angle-right"></i>
                     jQuery UI
                   </a>
                 </li>
 
                 <li>
-                  <a href="nestable-list.html">
+                  <a href="#">
                     <i class="icon-double-angle-right"></i>
                     可拖拽列表
                   </a>
