--- a/app/assets/stylesheets/application/share.scss
+++ b/app/assets/stylesheets/application/share.scss
@@ -1,6 +1,6 @@
 @import "variables";
 //header
-.my-navbar{
+.navbar.navbar-inverse.my-navbar{
 	font-weight: bold;
 	border: none !important;
 	li.active{
