--- a/app/views/training_platform/home/index.html.erb
+++ b/app/views/training_platform/home/index.html.erb
@@ -21,14 +21,21 @@
             <li class="active">
               <a href="index.html">
                 <i class="icon-dashboard"></i>
-                <span class="menu-text"> 公告信息 </span>
+                <span class="menu-text"> 关注的项目</span>
+              </a>
+            </li>
+
+            <li >
+              <a href="index.html">
+                <i class="icon-dashboard"></i>
+                <span class="menu-text"> 全部项目</span>
               </a>
             </li>
 
             <li>
               <a href="typography.html">
                 <i class="icon-text-width"></i>
-                <span class="menu-text"> 文字排版 </span>
+                <span class="menu-text"> 归档项目 </span>
               </a>
             </li>
 
@@ -270,10 +277,7 @@
                 </div>
                 </div>
                 </div>
-
-
-                    <div class="col-xs-12 main-bg">
-
+                <div class="col-xs-12 main-bg">
                     <div class="col-sm-6">
                     <%=link_to 'training_platform/projects' do |i| %>
                 
@@ -342,7 +346,6 @@
                       </div>
                     </div>
                 <!-- PAGE CONTENT ENDS -->
-                </div>
                 </div>
               </div><!-- /.col -->
             </div><!-- /.row -->
